--- a/style.css
+++ b/style.css
@@ -8,10 +8,9 @@ body {
 
 .container {
     width: 90%;
-    max-width: 1200px;
     margin: 0 auto;
     justify-content: center;
-    justify-items: center;
+    justify-self: center;
     align-items: center;
 }
 
@@ -73,7 +72,6 @@ header {
 .hero-section {
     text-align: center;
     padding: 60px 20px;
-    background: url('images/hero-bg.jpg') no-repeat center center/cover;
 }
 
 .hero-section h1 {
@@ -100,11 +98,91 @@ header {
 
 .btn-primary:hover {
   background-color: #ffd900;
-  
+
+}
+
+.about {
+  padding: 50px 20px;
+  text-align: center;
+  font-weight: bold;
+  background-color: #ffffff;
+}
+
+.about .container {
+  justify-content: center;
+  align-content: center;
+  margin-bottom: 60px;
+  width: 1300px;
+}
+
+.about h2 {
+  font-size: 36px;
+  margin-bottom: 30px;
+}
+
+.about p {
+  font-size: 18px;
+  max-width: 800px;
+  margin: 0 auto;
+  line-height: 1.8;
+  color: #2d2d2d;
+}
+
+.member-grid {
+  justify-self: center;
+  align-self: center;
+  justify-content: center;
+  display: flex;
+  width: 1300px;
+
+}
+
+.member-grid a {
+  text-decoration: none;
+}
+
+.member-card {
+  background: #1c1c1c;
+  padding: 10px;
+  border-radius: 15px;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  height: 250px;
+  width: 210px;
+  margin: 10px;
+}
+
+.member-card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.15);
+}
+
+.member-card img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.member-card h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+  color: #fff;
+}
+
+.member-card p {
+  font-size: 16px;
+  color: #555;
+  line-height: 1.6;
+}
+
+.member-links i {
+  padding-right: 5px;
+  padding-left: 5px;
 }
 
 .reports {
-    background-color: #ffffff;
+    background: linear-gradient(135deg, #786600, #ffd900);
     padding: 80px 20px;
     text-align: center;
 }
@@ -114,10 +192,18 @@ header {
     margin-bottom: 50px;
 }
 
+.reports .container {
+  justify-content: center;
+}
+
 .report-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 40px;
+}
+
+.report-grid a {
+  text-decoration: none;
 }
 
 .report-card {
@@ -126,6 +212,7 @@ header {
     border-radius: 15px;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    min-height: 200px;
 }
 
 .report-card:hover {
@@ -148,26 +235,6 @@ header {
     font-size: 16px;
     color: #555;
     line-height: 1.6;
-}
-
-.about {
-    padding: 80px 20px;
-    text-align: center;
-    font-weight: bold;
-    background: linear-gradient(135deg, #786600, #ffd900);
-}
-
-.about h2 {
-    font-size: 36px;
-    margin-bottom: 30px;
-}
-
-.about p {
-    font-size: 18px;
-    max-width: 800px;
-    margin: 0 auto;
-    line-height: 1.8;
-    color: #2d2d2d;
 }
 
 .cta-section {
@@ -260,9 +327,7 @@ footer {
 }
 
 .footer-links {
-    
     display: flex;
-    
 }
 
 .footer-links a {
