--- a/style.css
+++ b/style.css
@@ -298,8 +298,30 @@ header {
   text-shadow: #f4f6f8;
 }
 
+.btn2{
+  
+  height:60px;
+  width:60px;
+
+  border-radius: 50%;
+  font-size: 2rem;
+  color: black;
+  background-color: var(--black-color);
+  border: none;
+  
+  box-shadow: 0px 0px 17px -2px rgba(255, 255, 255, 0.75);
+  cursor: pointer;
+}
+
+.btn2:hover{
+
+  zoom: 110%;
+  opacity: 70%;
+  margin-bottom: -5.5px;
+}
+
 footer {
-    background: #0f0f1f;
+    background: #000000;
     color: #ffffff;
     padding: 40px 20px;
     text-align: center;
